<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_fon"
    tools:context=".AuthorisationMain">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="376dp"
        android:layout_marginBottom="696dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/txtSignInAuth"
        app:layout_constraintTop_toBottomOf="@+id/edtxtUser"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/vector" />

    <ImageView
        android:id="@+id/imgSPtextAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sptext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127"
        app:srcCompat="@drawable/sptext" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958">

        <TextView
            android:id="@+id/txtNum9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num9"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp" />

        <TextView
            android:id="@+id/txtNum6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num6"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/txtNum3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            android:id="@+id/txtNum1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/txtNum2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="2"
            app:layout_row="0" />

        <TextView
            android:id="@+id/txtNum8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num8"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="2"
            app:layout_row="2" />

        <TextView
            android:id="@+id/txtNum5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="2"
            app:layout_row="1" />

        <TextView
            android:id="@+id/txtNum7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num7"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/txtNum4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/pass_button"
            android:clickable="true"
            android:text="@string/num4"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="64dp"
            app:layout_column="1"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vasya@mail.ru"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSPtextAuth"
        app:layout_constraintVertical_bias="0.721" />

</androidx.constraintlayout.widget.ConstraintLayout>