<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recipes">

    <ImageView
        android:id="@+id/recipesFon"
        android:layout_width="432dp"
        android:layout_height="203dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/recipesfon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="370dp"
        android:layout_marginBottom="154dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipesFon"
        app:layout_constraintEnd_toEndOf="@+id/recipesFon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/recipesback" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="163dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipesFon"
        app:layout_constraintEnd_toEndOf="@+id/recipesFon"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/recipestext" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="390dp"
        android:layout_height="40dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="79dp"
        android:background="@drawable/search"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/search"
        android:textColor="@color/search"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/recipesFon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recipesFon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="88dp"
        android:layout_height="31dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="312dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame_recipes"
        android:text="@string/balanced"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipesFon"
        app:layout_constraintEnd_toEndOf="@+id/recipesFon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="88dp"
        android:layout_height="31dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame_recipes"
        android:text="@string/highbar"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipesFon"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/frame_recipes"
        android:text="@string/higjprotein"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/recipesFon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>