<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_fon"
    tools:context=".Authorisation">

    <TextView
        android:id="@+id/txtUpAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="AuthSignUpText"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtUser"
        app:layout_constraintVertical_bias="0.948" />

    <ImageView
        android:id="@+id/imgSPtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sptext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112"
        app:srcCompat="@drawable/sptext" />

    <EditText
        android:id="@+id/edtxtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtUserName"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSPtext"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/txtSignInAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="AuthSignInText"
        android:text="@string/txtSign"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtUser"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgvIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="AuthSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toEndOf="@+id/txtSignInAuth"
        app:layout_constraintTop_toBottomOf="@+id/edtxtUser"
        app:layout_constraintVertical_bias="0.021"
        app:srcCompat="@drawable/vector" />

    <ImageView
        android:id="@+id/imgvUp"
        android:layout_width="17dp"
        android:layout_height="25dp"
        android:background="@drawable/vector"
        android:clickable="true"
        android:onClick="AuthSignUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/txtUpAuth"
        app:layout_constraintTop_toBottomOf="@+id/txtSignInAuth"
        app:layout_constraintVertical_bias="0.944"
        app:srcCompat="@drawable/vector" />

</androidx.constraintlayout.widget.ConstraintLayout>